# pagefly

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  README_CN.md  config.json.example  deploy-frontend.sh  docker-compose.yml  pyproject.toml  railway.toml  update.sh
.github/workflows/: docker.yml
browser-extension/: content.js  manifest.json  popup.html  popup.js
config/: SCHEMA.md  categories.json  schedules.json
config/prompts/: classifier.md
data/: log.md
desktop-capture/: .gitignore  README.md  project.yml
desktop-capture/PageflyCapture.xcodeproj/: project.pbxproj
desktop-capture/Resources/: Info.plist  PageflyCapture.entitlements
desktop-capture/scripts/: generate-icons.py  package-local.sh  release.sh
docs/: IMPLEMENTATION_PLAN.md  desktop-auto-capture.md  idea.md
docs/implementation/: desktop-capture.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
scripts/: hash_password.py  run_api.py  run_telegram.py  test_compiler.py  test_organize.py  test_pdf_ingest.py
skills/pagefly/: SKILL.md
src/: cli.py  demo.py  main.py
src/activity/: __init__.py
src/agents/: activity_log.py  base.py  compiler.py  query.py  review.py
src/auth/: routes.py  service.py
src/channels/: api.py  approval.py  telegram.py
src/governance/: auto_classify.py  classifier.py  organizer.py  workspace_organizer.py
src/ingest/: metadata.py  pipeline.py
src/scheduler/: engine.py  notifier.py  watcher.py
src/shared/: activity_log.py  config.py  indexer.py  integrity.py  types.py  (+3 more)
(+93 files in other folders)
