[project]
name = "pagefly"
version = "0.1.0"
description = "Personal Knowledge Data Platform"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=1.0.0",
    "openai>=1.0.0",
    "mistralai>=1.0.0",
    "claude-agent-sdk>=0.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.20.0",
    "apscheduler>=3.10.0",
    "python-telegram-bot[job-queue]>=22.0",
    "markdown>=3.5",
    "weasyprint>=60.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
